# mini-artificer

./: .gitignore  README.md  accelerate_config.yaml  chat_template.py  config.py  data_loader.py  inference.py  preprocess_data.py  pyproject.toml  train.py
scripts/: kaggle_training_script.ipynb  training-script.ipynb
tests/: test_chat_template.py  test_data_loader.py  test_inference.py  test_inference_format.py  test_preprocessing.py  test_push_to_hub.py  test_tokenizer_save.py  test_train_launch.py
