[project]
name = "mini-artificer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "huggingface-hub>=0.26.0",
    "ipykernel>=6.29.0",
    "numpy==2.0.2",
    "peft>=0.17.0",
    "scipy==1.14.1",
    "torch>=2.0.0",
    "torchao>=0.16.0",
    "transformers>=4.52.0",
]
